--- a/src/pwa-stylesheets/style.css
+++ b/src/pwa-stylesheets/style.css
@@ -493,7 +493,7 @@ main.mdl-layout__content {
   @media only screen and (max-width: 1024px) {
     .initial-data-loading-spinner {
       margin-bottom: 80vh;
-      margin-bottom: calc( 100vh - 140px ); } }
+      margin-bottom: calc(100vh - 140px ); } }
 
 .mdl-layout__drawer.is-visible ~ .mdl-layout__content {
   flex-shrink: 1; }
@@ -742,17 +742,21 @@ main.mdl-layout__content {
 @-webkit-keyframes sk-scaleout {
   0% {
     -webkit-transform: scale(0); }
+
   100% {
     -webkit-transform: scale(1);
     opacity: 0; } }
+
 @keyframes sk-scaleout {
   0% {
     -webkit-transform: scale(0);
     transform: scale(0); }
+
   100% {
     -webkit-transform: scale(1);
     transform: scale(1);
     opacity: 0; } }
+
 ul.pratilipi-notification-list {
   list-style: none;
   top: 0;
@@ -1276,19 +1280,7 @@ nav.pratilipi-navigation-drawer {
     .pratilipi-pratilipi-card .pratilipi-meta-holder .mdl-card__title {
       padding: 0; }
     .pratilipi-pratilipi-card .pratilipi-meta-holder .pratilipi-title.mdl-card__title {
-      margin: 0;
-      -webkit-line-clamp: 2;
-      -webkit-box-orient: vertical;
-      overflow: hidden;
-      height: 58.8px;
-      display: -webkit-box;
-      text-overflow: ellipsis;
-      line-height: 1.4;
-      font-size: 21px; }
-      @media (max-width: 480px) {
-        .pratilipi-pratilipi-card .pratilipi-meta-holder .pratilipi-title.mdl-card__title {
-          height: 29.4px;
-          -webkit-line-clamp: 1; } }
+      margin: 0; }
     .pratilipi-pratilipi-card .pratilipi-meta-holder .single-line {
       overflow: hidden;
       display: inline-block;
@@ -1300,9 +1292,7 @@ nav.pratilipi-navigation-drawer {
     .pratilipi-pratilipi-card .pratilipi-meta-holder .author-name {
       margin-bottom: 8px; }
     .pratilipi-pratilipi-card .pratilipi-meta-holder .pratilipi-card-meta-reads-rating-holder {
-      color: rgba(0, 0, 0, 0.54);
-      position: absolute;
-      bottom: 0; }
+      color: rgba(0, 0, 0, 0.54); }
       .pratilipi-pratilipi-card .pratilipi-meta-holder .pratilipi-card-meta-reads-rating-holder span.meta-holder {
         float: left; }
         .pratilipi-pratilipi-card .pratilipi-meta-holder .pratilipi-card-meta-reads-rating-holder span.meta-holder span {
@@ -1393,73 +1383,13 @@ nav.pratilipi-navigation-drawer {
 .carousel-indicators {
   bottom: -16px; }
 
-@media only screen and (min-width: 640px) {
-  .youtube-subscribe-widget {
-    display: none; } }
-.youtube-subscribe-widget .clearfix:after {
-  content: " ";
-  visibility: hidden;
-  display: block;
-  height: 0;
-  clear: both; }
-
 .section-list .section-container {
   margin-bottom: 20px; }
-  .section-list .section-container .demo-card-square.mdl-card {
-    width: 320px;
-    height: 320px; }
-  .section-list .section-container .demo-card-square > .mdl-card__title {
-    color: #fff;
-    background: url(https://yt3.ggpht.com/-1sS2YQfGsac/AAAAAAAAAAI/AAAAAAAAAAA/QCrPtAXpBPI/s100-c-k-no-mo-rj-c0xffffff/photo.jpg) bottom right 15% no-repeat red; }
-  .section-list .section-container .owl-carousel.owl-loaded {
-    display: grid; }
-  .section-list .section-container .owl-carousel .owl-nav {
-    display: none; }
-  @media only screen and (min-width: 841px) {
-    .section-list .section-container .owl-carousel:hover .owl-nav {
-      display: block; }
-    .section-list .section-container .owl-carousel .owl-nav {
-      font-size: 2em;
-      color: #FFF; }
-      .section-list .section-container .owl-carousel .owl-nav .owl-next,
-      .section-list .section-container .owl-carousel .owl-nav .owl-prev {
-        position: absolute;
-        top: 0;
-        height: 150px;
-        margin-top: 8px;
-        margin-bottom: 8px;
-        background-color: rgba(0, 0, 0, 0.4);
-        -webkit-transition: background-color 1s;
-        /* Safari */
-        transition: background-color 1s; }
-        .section-list .section-container .owl-carousel .owl-nav .owl-next:hover,
-        .section-list .section-container .owl-carousel .owl-nav .owl-prev:hover {
-          background-color: rgba(0, 0, 0, 0.6); }
-        .section-list .section-container .owl-carousel .owl-nav .owl-next i,
-        .section-list .section-container .owl-carousel .owl-nav .owl-prev i {
-          margin-top: 60px; }
-      .section-list .section-container .owl-carousel .owl-nav .disabled {
-        display: none; }
-      .section-list .section-container .owl-carousel .owl-nav .owl-next {
-        right: 0;
-        padding-right: 15px; }
-        .section-list .section-container .owl-carousel .owl-nav .owl-next i {
-          margin-left: 6px; }
-      .section-list .section-container .owl-carousel .owl-nav .owl-prev {
-        left: 0;
-        padding-left: 15px; }
-        .section-list .section-container .owl-carousel .owl-nav .owl-prev i {
-          margin-right: 6px; } }
   .section-list .section-container .section-title {
     margin: 0;
     background: #fff;
     padding: 16px 8px;
     color: #333; }
-  .section-list .section-container .each-pratilipi {
-    width: 300px; }
-    @media only screen and (max-width: 480px) {
-      .section-list .section-container .each-pratilipi {
-        width: 250px; } }
   @media only screen and (max-width: 480px) {
     .section-list .section-container .view-more-holder {
       padding: 0; }
@@ -1859,7 +1789,7 @@ nav.pratilipi-navigation-drawer {
         flex-grow: 1; }
       .pratilipi-settings-page .vertical-mdl-tabs .settings-grid .tabs-right-pane #profile-settings .summary-holder {
         width: 96% !important;
-        width: calc( 100% - 8px ) !important;
+        width: calc(100% - 8px ) !important;
         margin: auto; }
         .pratilipi-settings-page .vertical-mdl-tabs .settings-grid .tabs-right-pane #profile-settings .summary-holder .mdl-textfield {
           width: 100%; }
@@ -1880,7 +1810,7 @@ nav.pratilipi-navigation-drawer {
         .pratilipi-settings-page .vertical-mdl-tabs .settings-grid .tabs-right-pane .width-50 .mdl-textfield {
           min-width: initial;
           width: 96% !important;
-          width: calc( 100% - 8px ) !important; }
+          width: calc(100% - 8px ) !important; }
 .pratilipi-settings-page ul.dropdown-ul {
   width: 100%;
   -webkit-box-shadow: 0 3px 9px rgba(0, 0, 0, 0.5);
@@ -1899,19 +1829,6 @@ nav.pratilipi-navigation-drawer {
   font-size: 32px; }
 .pratilipi-settings-page .vertical-mdl-tabs.mdl-tabs.is-upgraded a.mdl-tabs__tab.is-active {
   border-right: 2px solid #d0021b; }
-.pratilipi-settings-page .vertical-mdl-tabs.mdl-tabs.is-upgraded a.mdl-tabs__tab.is-activated {
-  color: rgba(0, 0, 0, 0.87);
-  border-right: none;
-  border-bottom: 2px solid #d0021b; }
-.pratilipi-settings-page .vertical-mdl-tabs.mdl-tabs.is-upgraded a.invite-tab.mdl-tabs__tab.is-active {
-  border-right: none;
-  border-bottom: 2px solid #d0021b; }
-.pratilipi-settings-page .vertical-mdl-tabs.mdl-tabs.is-upgraded a.follow-tab.mdl-tabs__tab.is-active {
-  border-right: none;
-  border-bottom: 2px solid #d0021b; }
-.pratilipi-settings-page .mdl-tabs.is-upgraded .mdl-tabs__panel.invite-section.is-activated,
-.pratilipi-settings-page .mdl-tabs.is-upgraded .mdl-tabs__panel.follow-section.is-activated {
-  display: block; }
 .pratilipi-settings-page .vertical-mdl-tabs.mdl-tabs.is-upgraded .mdl-tabs__tab.is-active:after {
   content: inherit;
   height: 0; }
@@ -1922,13 +1839,6 @@ nav.pratilipi-navigation-drawer {
   right: 0;
   bottom: 0;
   margin: auto; }
-@media only screen and (max-width: 490px) {
-  .pratilipi-settings-page #connected-accounts table th:nth-child(2) {
-    display: none; }
-  .pratilipi-settings-page #connected-accounts table td:nth-child(2) {
-    display: none; } }
-.pratilipi-settings-page .search-contact .mdl-textfield__label:after {
-  bottom: 0px; }
 
 .pratilipi-event-page .mdl-card.image-holder {
   margin-bottom: 0;
@@ -2302,15 +2212,19 @@ nav.pratilipi-navigation-drawer {
 @-webkit-keyframes sk-bounce {
   0%, 100% {
     -webkit-transform: scale(0); }
+
   50% {
     -webkit-transform: scale(1); } }
+
 @keyframes sk-bounce {
   0%, 100% {
     transform: scale(0);
     -webkit-transform: scale(0); }
+
   50% {
     transform: scale(1);
     -webkit-transform: scale(1); } }
+
 .pratilipi-reader-header {
   flex-grow: 1;
   padding: 0 6px;
@@ -2692,33 +2606,33 @@ nav.mdl-navigation {
     white-space: normal; }
 
 .th-nor-config {
-  background-color: #FFF !important;
-  color: #333 !important; }
+  background-color: white !important;
+  color: #333333 !important; }
 
 .th-ngt-config {
-  background-color: #333 !important;
-  color: #FFF !important; }
+  background-color: #333333 !important;
+  color: white !important; }
 
 .th-sep-config {
-  background-color: #F4ECD8 !important;
+  background-color: #f4ecd8 !important;
   color: #181715 !important; }
 
 .pratilipi-reader.th-nor {
-  background-color: #FFF !important; }
+  background-color: white !important; }
   .pratilipi-reader.th-nor .pratilipi-reader-header, .pratilipi-reader.th-nor .pratilipi-reader-navigation, .pratilipi-reader.th-nor .content, .pratilipi-reader.th-nor .content *, .pratilipi-reader.th-nor .content > *, .pratilipi-reader.th-nor .pratilipi-reader-footer {
-    background-color: #FFF !important;
-    color: #333 !important; }
+    background-color: white !important;
+    color: #333333 !important; }
 
 .pratilipi-reader.th-ngt {
-  background-color: #333 !important; }
+  background-color: #333333 !important; }
   .pratilipi-reader.th-ngt .pratilipi-reader-header, .pratilipi-reader.th-ngt .pratilipi-reader-navigation, .pratilipi-reader.th-ngt .content, .pratilipi-reader.th-ngt .content *, .pratilipi-reader.th-ngt .content > *, .pratilipi-reader.th-ngt .pratilipi-reader-footer {
-    background-color: #333 !important;
-    color: #FFF !important; }
+    background-color: #333333 !important;
+    color: white !important; }
 
 .pratilipi-reader.th-sep {
-  background-color: #F4ECD8 !important; }
+  background-color: #f4ecd8 !important; }
   .pratilipi-reader.th-sep .pratilipi-reader-header, .pratilipi-reader.th-sep .pratilipi-reader-navigation, .pratilipi-reader.th-sep .content, .pratilipi-reader.th-sep .content *, .pratilipi-reader.th-sep .content > *, .pratilipi-reader.th-sep .pratilipi-reader-footer {
-    background-color: #F4ECD8 !important;
+    background-color: #f4ecd8 !important;
     color: #181715 !important; }
 
 .pratilipi-reader-footer {
@@ -2970,7 +2884,7 @@ pratilipi-loading-state {
   margin-top: 60px;
   margin-bottom: 12px;
   min-height: 100vh;
-  min-height: calc( 100vh - 60px ); }
+  min-height: calc(100vh - 60px ); }
   @media only screen and (min-width: 1025px) {
     .pratilipi-search-page div.body .default-result {
       min-height: 285px; } }
@@ -3120,7 +3034,7 @@ ul.pratilipi-recommendation-carousel {
   max-width: 100%;
   overflow-x: auto;
   overflow-y: hidden;
-  background: white; }
+  background: inherit; }
   @media only screen and (max-width: 768px) {
     ul.pratilipi-recommendation-carousel {
       white-space: nowrap; }
@@ -3268,267 +3182,3 @@ ul.pratilipi-recommendation-carousel {
       .pratilipi-author-leaderboard .author-leaderboard-ul .mdl-list__item .small-button {
         min-width: 36px;
         padding: 0; }
-
-.pratilipi-author-leaderboard-mini {
-  margin-top: 10px;
-  margin-bottom: 10px; }
-  .pratilipi-author-leaderboard-mini .author_details {
-    position: absolute;
-    width: 80px;
-    text-align: center;
-    padding-top: 10px; }
-  .pratilipi-author-leaderboard-mini .each_author {
-    display: inline-block;
-    text-align: center;
-    cursor: pointer; }
-    .pratilipi-author-leaderboard-mini .each_author .author-name {
-      width: 100%;
-      overflow: hidden;
-      display: inline-block;
-      text-overflow: ellipsis;
-      white-space: nowrap;
-      line-height: 25px; }
-    .pratilipi-author-leaderboard-mini .each_author .author_image {
-      width: 80px;
-      height: 80px;
-      position: relative;
-      overflow: hidden;
-      display: inline-block;
-      border-radius: 50%; }
-    .pratilipi-author-leaderboard-mini .each_author .author_image img {
-      height: auto;
-      width: 100%; }
-  .pratilipi-author-leaderboard-mini .owl-carousel .owl-stage-outer {
-    height: 200px;
-    padding-top: 10px;
-    margin-left: 30px; }
-  .pratilipi-author-leaderboard-mini .owl-carousel .owl-item {
-    width: 130px !important; }
-  .pratilipi-author-leaderboard-mini .mdl-badge.mdl-badge--overlap:after {
-    left: calc(25% - 9px);
-    top: -3px;
-    color: white;
-    background-color: #D0021B; }
-  @media only screen and (min-width: 841px) {
-    .pratilipi-author-leaderboard-mini {
-      display: none !important;
-      visibility: hidden !important; } }
-
-.pratilipi-author-leaderboard-mini.mdl-card {
-  min-height: 160px; }
-
-@media only screen and (min-width: 840px) {
-  .pratilipi-social-connect {
-    display: none; } }
-.pratilipi-social-connect .clearfix:after {
-  content: " ";
-  visibility: hidden;
-  display: block;
-  height: 0;
-  clear: both; }
-.pratilipi-social-connect .google-button {
-  background-color: #FFFFFF;
-  width: 100%; }
-.pratilipi-social-connect .login-checked-icon {
-  position: absolute;
-  margin-top: 7px;
-  right: 10px; }
-.pratilipi-social-connect .disable-google {
-  background-color: rgba(0, 0, 0, 0.3); }
-.pratilipi-social-connect button.login-success:after {
-  width: 10px; }
-.pratilipi-social-connect button:not(.disabled):before {
-  content: '';
-  position: absolute;
-  right: 10px;
-  top: 50%;
-  margin-top: -9px;
-  width: 10px;
-  height: 10px;
-  border: 4px solid;
-  border-left-color: transparent;
-  border-radius: 50%;
-  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
-  opacity: 0;
-  -moz-transition-duration: 0.5s;
-  -o-transition-duration: 0.5s;
-  -webkit-transition-duration: 0.5s;
-  transition-duration: 0.5s;
-  -moz-transition-property: opacity;
-  -o-transition-property: opacity;
-  -webkit-transition-property: opacity;
-  transition-property: opacity;
-  -moz-animation-duration: 1s;
-  -webkit-animation-duration: 1s;
-  animation-duration: 1s;
-  -moz-animation-iteration-count: infinite;
-  -webkit-animation-iteration-count: infinite;
-  animation-iteration-count: infinite;
-  -moz-animation-name: rotate;
-  -webkit-animation-name: rotate;
-  animation-name: rotate;
-  -moz-animation-timing-function: linear;
-  -webkit-animation-timing-function: linear;
-  animation-timing-function: linear; }
-.pratilipi-social-connect button:not(.disabled):after {
-  content: '';
-  display: inline-block;
-  width: 0px;
-  -moz-transition-delay: 0.5s;
-  -o-transition-delay: 0.5s;
-  -webkit-transition-delay: 0.5s;
-  transition-delay: 0.5s;
-  -moz-transition-duration: 0.75s;
-  -o-transition-duration: 0.75s;
-  -webkit-transition-duration: 0.75s;
-  transition-duration: 0.75s;
-  -moz-transition-property: width;
-  -o-transition-property: width;
-  -webkit-transition-property: width;
-  transition-property: width; }
-.pratilipi-social-connect button:not(.disabled).sending {
-  pointer-events: none;
-  cursor: not-allowed; }
-.pratilipi-social-connect button:not(.disabled).sending:not(.expand) {
-  text-align: center; }
-.pratilipi-social-connect button:not(.disabled).sending:before {
-  -moz-transition-delay: 0.5s;
-  -o-transition-delay: 0.5s;
-  -webkit-transition-delay: 0.5s;
-  transition-delay: 0.5s;
-  -moz-transition-duration: 1s;
-  -o-transition-duration: 1s;
-  -webkit-transition-duration: 1s;
-  transition-duration: 1s;
-  filter: progid:DXImageTransform.Microsoft.Alpha(enabled=false);
-  opacity: 1; }
-.pratilipi-social-connect button:not(.disabled).sending:after {
-  -moz-transition-delay: 0s;
-  -o-transition-delay: 0s;
-  -webkit-transition-delay: 0s;
-  transition-delay: 0s; }
-@keyframes rotate {
-  0% {
-    -moz-transform: rotate(0deg);
-    -ms-transform: rotate(0deg);
-    -webkit-transform: rotate(0deg);
-    transform: rotate(0deg); }
-  100% {
-    -moz-transform: rotate(360deg);
-    -ms-transform: rotate(360deg);
-    -webkit-transform: rotate(360deg);
-    transform: rotate(360deg); } }
-@media only screen and (min-width: 840px) {
-  .pratilipi-social-connect {
-    display: none; } }
-.pratilipi-social-connect .clearfix:after {
-  content: " ";
-  visibility: hidden;
-  display: block;
-  height: 0;
-  clear: both; }
-.pratilipi-social-connect .facebook-button {
-  color: #FFFFFF;
-  width: 100%; }
-.pratilipi-social-connect .login-checked-icon {
-  position: absolute;
-  margin-top: 7px;
-  right: 10px; }
-.pratilipi-social-connect .facebook-connect-button {
-  background-color: #3b5998; }
-.pratilipi-social-connect .disable-facebook {
-  background-color: rgba(59, 89, 152, 0.5); }
-.pratilipi-social-connect button.login-success:after {
-  width: 10px; }
-.pratilipi-social-connect button:not(.disabled):before {
-  content: '';
-  position: absolute;
-  right: 10px;
-  top: 50%;
-  margin-top: -9px;
-  width: 10px;
-  height: 10px;
-  border: 4px solid;
-  border-left-color: transparent;
-  border-radius: 50%;
-  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
-  opacity: 0;
-  -moz-transition-duration: 0.5s;
-  -o-transition-duration: 0.5s;
-  -webkit-transition-duration: 0.5s;
-  transition-duration: 0.5s;
-  -moz-transition-property: opacity;
-  -o-transition-property: opacity;
-  -webkit-transition-property: opacity;
-  transition-property: opacity;
-  -moz-animation-duration: 1s;
-  -webkit-animation-duration: 1s;
-  animation-duration: 1s;
-  -moz-animation-iteration-count: infinite;
-  -webkit-animation-iteration-count: infinite;
-  animation-iteration-count: infinite;
-  -moz-animation-name: rotate;
-  -webkit-animation-name: rotate;
-  animation-name: rotate;
-  -moz-animation-timing-function: linear;
-  -webkit-animation-timing-function: linear;
-  animation-timing-function: linear; }
-.pratilipi-social-connect button:not(.disabled):after {
-  content: '';
-  display: inline-block;
-  width: 0px;
-  -moz-transition-delay: 0.5s;
-  -o-transition-delay: 0.5s;
-  -webkit-transition-delay: 0.5s;
-  transition-delay: 0.5s;
-  -moz-transition-duration: 0.75s;
-  -o-transition-duration: 0.75s;
-  -webkit-transition-duration: 0.75s;
-  transition-duration: 0.75s;
-  -moz-transition-property: width;
-  -o-transition-property: width;
-  -webkit-transition-property: width;
-  transition-property: width; }
-.pratilipi-social-connect button:not(.disabled).sending {
-  pointer-events: none;
-  cursor: not-allowed; }
-.pratilipi-social-connect button:not(.disabled).sending:not(.expand) {
-  text-align: center; }
-.pratilipi-social-connect button:not(.disabled).sending:before {
-  -moz-transition-delay: 0.5s;
-  -o-transition-delay: 0.5s;
-  -webkit-transition-delay: 0.5s;
-  transition-delay: 0.5s;
-  -moz-transition-duration: 1s;
-  -o-transition-duration: 1s;
-  -webkit-transition-duration: 1s;
-  transition-duration: 1s;
-  filter: progid:DXImageTransform.Microsoft.Alpha(enabled=false);
-  opacity: 1; }
-.pratilipi-social-connect button:not(.disabled).sending:after {
-  -moz-transition-delay: 0s;
-  -o-transition-delay: 0s;
-  -webkit-transition-delay: 0s;
-  transition-delay: 0s; }
-@keyframes rotate {
-  0% {
-    -moz-transform: rotate(0deg);
-    -ms-transform: rotate(0deg);
-    -webkit-transform: rotate(0deg);
-    transform: rotate(0deg); }
-  100% {
-    -moz-transform: rotate(360deg);
-    -ms-transform: rotate(360deg);
-    -webkit-transform: rotate(360deg);
-    transform: rotate(360deg); } }
-#pratilipi-invite-users .mdl-textfield__label:after {
-  bottom: 0px; }
-#pratilipi-invite-users .mdl-list {
-  max-height: 50vh;
-  padding-bottom: 30px;
-  overflow-y: scroll;
-  margin: 0; }
-  #pratilipi-invite-users .mdl-list .mdl-list__item:hover {
-    background-color: rgba(0, 0, 0, 0.1); }
-
-/*# sourceMappingURL=style.css.map */
