--- a/src/pwa-stylesheets/style.css
+++ b/src/pwa-stylesheets/style.css
@@ -1845,6 +1845,49 @@ nav.pratilipi-navigation-drawer {
   right: 0;
   bottom: 0;
   margin: auto; }
+.pratilipi-settings-page div.modal-body {
+  padding: 15px 30px; }
+  .pratilipi-settings-page div.modal-body .mdl-textfield {
+    width: 100% !important;
+    display: block; }
+  .pratilipi-settings-page div.modal-body i.dropdown-icon {
+    position: absolute;
+    right: 0px;
+    bottom: 18px;
+    width: 32px;
+    height: 32px;
+    font-size: 32px; }
+  .pratilipi-settings-page div.modal-body ul.dropdown-ul {
+    width: 100%;
+    -webkit-box-shadow: 0 3px 9px rgba(0, 0, 0, 0.5);
+    box-shadow: 0 3px 9px rgba(0, 0, 0, 0.5);
+    border: 1px solid #999;
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    border-radius: 4px; }
+    .pratilipi-settings-page div.modal-body ul.dropdown-ul .mdl-menu__item, .pratilipi-settings-page div.modal-body ul.dropdown-ul .mdl-menu__item:hover {
+      color: #000; }
+.pratilipi-settings-page .eachBlog:hover {
+  background-color: rgba(178, 189, 189, 0.2); }
+.pratilipi-settings-page .tooltip {
+  position: relative;
+  display: inline-block;
+  border-bottom: 1px dotted black; }
+.pratilipi-settings-page .tooltip .tooltiptext {
+  visibility: hidden;
+  background-color: black;
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  padding: 5px 0;
+  width: 120px;
+  bottom: 100%;
+  left: 50%;
+  margin-left: -60px;
+  /* Position the tooltip */
+  position: absolute;
+  z-index: 1; }
+.pratilipi-settings-page .tooltip:hover .tooltiptext {
+  visibility: visible; }
 
 .pratilipi-event-page .mdl-card.image-holder {
   margin-bottom: 0;
