Updating PWA files

--- a/src/pwa-stylesheets/style.css
+++ b/src/pwa-stylesheets/style.css
@@ -594,16 +594,6 @@ main.mdl-layout__content {
             cursor: pointer;
             bottom: 22px;
             background: white; }
-          .pratilipi-header .row-one .search-bar-holder form .mdl-textfield input::-webkit-input-placeholder {
-            color: red !important; }
-          .pratilipi-header .row-one .search-bar-holder form .mdl-textfield input:-moz-placeholder {
-            /* Firefox 18- */
-            color: red !important; }
-          .pratilipi-header .row-one .search-bar-holder form .mdl-textfield input::-moz-placeholder {
-            /* Firefox 19+ */
-            color: red !important; }
-          .pratilipi-header .row-one .search-bar-holder form .mdl-textfield input:-ms-input-placeholder {
-            color: red !important; }
     .pratilipi-header .row-one .header-icons-holder {
       flex-basis: 48px;
       text-align: center; }
@@ -1795,7 +1785,7 @@ nav.pratilipi-navigation-drawer {
         flex-grow: 1; }
       .pratilipi-settings-page .vertical-mdl-tabs .settings-grid .tabs-right-pane #profile-settings .summary-holder {
         width: 96% !important;
-        width: calc( 100% - 8px ) !important;
+        width: calc( 100% - 8px) !important;
         margin: auto; }
         .pratilipi-settings-page .vertical-mdl-tabs .settings-grid .tabs-right-pane #profile-settings .summary-holder .mdl-textfield {
           width: 100%; }
@@ -1816,7 +1806,7 @@ nav.pratilipi-navigation-drawer {
         .pratilipi-settings-page .vertical-mdl-tabs .settings-grid .tabs-right-pane .width-50 .mdl-textfield {
           min-width: initial;
           width: 96% !important;
-          width: calc( 100% - 8px ) !important; }
+          width: calc( 100% - 8px) !important; }
 .pratilipi-settings-page ul.dropdown-ul {
   width: 100%;
   -webkit-box-shadow: 0 3px 9px rgba(0, 0, 0, 0.5);
@@ -1824,7 +1814,8 @@ nav.pratilipi-navigation-drawer {
   border: 1px solid #999;
   border: 1px solid rgba(0, 0, 0, 0.2);
   border-radius: 4px; }
-  .pratilipi-settings-page ul.dropdown-ul .mdl-menu__item, .pratilipi-settings-page ul.dropdown-ul .mdl-menu__item:hover {
+  .pratilipi-settings-page ul.dropdown-ul .mdl-menu__item,
+  .pratilipi-settings-page ul.dropdown-ul .mdl-menu__item:hover {
     color: #000; }
 .pratilipi-settings-page i.dropdown-icon {
   position: absolute;
@@ -1847,25 +1838,26 @@ nav.pratilipi-navigation-drawer {
   margin: auto; }
 .pratilipi-settings-page div.modal-body {
   padding: 15px 30px; }
-  .pratilipi-settings-page div.modal-body .mdl-textfield {
-    width: 100% !important;
-    display: block; }
-  .pratilipi-settings-page div.modal-body i.dropdown-icon {
-    position: absolute;
-    right: 0px;
-    bottom: 18px;
-    width: 32px;
-    height: 32px;
-    font-size: 32px; }
-  .pratilipi-settings-page div.modal-body ul.dropdown-ul {
-    width: 100%;
-    -webkit-box-shadow: 0 3px 9px rgba(0, 0, 0, 0.5);
-    box-shadow: 0 3px 9px rgba(0, 0, 0, 0.5);
-    border: 1px solid #999;
-    border: 1px solid rgba(0, 0, 0, 0.2);
-    border-radius: 4px; }
-    .pratilipi-settings-page div.modal-body ul.dropdown-ul .mdl-menu__item, .pratilipi-settings-page div.modal-body ul.dropdown-ul .mdl-menu__item:hover {
-      color: #000; }
+.pratilipi-settings-page div.modal-body .mdl-textfield {
+  width: 100% !important;
+  display: block; }
+.pratilipi-settings-page div.modal-body i.dropdown-icon {
+  position: absolute;
+  right: 0px;
+  bottom: 18px;
+  width: 32px;
+  height: 32px;
+  font-size: 32px; }
+.pratilipi-settings-page div.modal-body ul.dropdown-ul {
+  width: 100%;
+  -webkit-box-shadow: 0 3px 9px rgba(0, 0, 0, 0.5);
+  box-shadow: 0 3px 9px rgba(0, 0, 0, 0.5);
+  border: 1px solid #999;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  border-radius: 4px; }
+.pratilipi-settings-page div.modal-body ul.dropdown-ul .mdl-menu__item,
+.pratilipi-settings-page div.modal-body ul.dropdown-ul .mdl-menu__item:hover {
+  color: #000; }
 .pratilipi-settings-page .eachBlog:hover {
   background-color: rgba(178, 189, 189, 0.2); }
 .pratilipi-settings-page .tooltip {
@@ -2596,20 +2588,19 @@ nav.mdl-navigation {
   .pratilipi-tags .pratilipi-tag-element {
     padding-top: 3px;
     padding-bottom: 3px;
-    padding-left: 10px;
-    padding-right: 10px;
+    padding-left: 12px;
+    padding-right: 12px;
     margin: 5px;
     text-align: center;
-    border: solid 1px black;
+    border: solid 1px #c8c8c8;
     border-radius: 20px;
+    margin-left: 0;
+    margin-right: 8px;
     cursor: pointer;
     white-space: nowrap; }
   .pratilipi-tags .checked {
-    background: #D0021B;
-    border: solid 1px #D0021B;
-    color: #FFF; }
+    background: #c8c8c8; }
   .pratilipi-tags .disabled {
-    border: 1px solid #D3D3D3;
     cursor: default; }
   @media (max-width: 480px) {
     .pratilipi-tags .save-tags-button {
@@ -2619,7 +2610,6 @@ nav.mdl-navigation {
     font-size: 80%;
     color: #4A4A4A; }
   .pratilipi-tags .mdl-textfield {
-    width: 100%;
     display: block; }
   .pratilipi-tags .dropdown-icon {
     position: absolute;
@@ -2649,6 +2639,57 @@ nav.mdl-navigation {
     top: -5px;
     right: 105%;
     white-space: normal; }
+  .pratilipi-tags .tag-deletable {
+    padding-right: 4px; }
+@keyframes ripple {
+  0% {
+    box-shadow: 0px 0px 0px 1px transparent; }
+  50% {
+    box-shadow: 0px 0px 0px 15px rgba(0, 0, 0, 0.1); }
+  100% {
+    box-shadow: 0px 0px 0px 15px transparent; } }
+  .pratilipi-tags .md-radio {
+    margin: 16px 0; }
+    .pratilipi-tags .md-radio.md-radio-inline {
+      display: inline-block; }
+    .pratilipi-tags .md-radio input[type="radio"] {
+      display: none; }
+      .pratilipi-tags .md-radio input[type="radio"]:checked + label:before {
+        border-color: #d0021b;
+        animation: ripple 0.2s linear forwards; }
+      .pratilipi-tags .md-radio input[type="radio"]:checked + label:after {
+        transform: scale(1); }
+    .pratilipi-tags .md-radio label {
+      display: inline-block;
+      height: 20px;
+      position: relative;
+      padding: 0 30px;
+      margin-bottom: 0;
+      cursor: pointer;
+      vertical-align: bottom; }
+      .pratilipi-tags .md-radio label:before, .pratilipi-tags .md-radio label:after {
+        position: absolute;
+        content: '';
+        border-radius: 50%;
+        transition: all .3s ease;
+        transition-property: transform, border-color; }
+      .pratilipi-tags .md-radio label:before {
+        left: 0;
+        top: 0;
+        width: 20px;
+        height: 20px;
+        border: 2px solid rgba(0, 0, 0, 0.54); }
+      .pratilipi-tags .md-radio label:after {
+        top: 5px;
+        left: 5px;
+        width: 10px;
+        height: 10px;
+        transform: scale(0);
+        background: #d0021b; }
+  .pratilipi-tags *, .pratilipi-tags *:before, .pratilipi-tags *:after {
+    box-sizing: border-box; }
+  .pratilipi-tags .pratilipi-red-important {
+    color: #d0021b !important; }
 
 .th-nor-config {
   background-color: #FFF !important;
