--- a/src/pwa-stylesheets/style.css
+++ b/src/pwa-stylesheets/style.css
@@ -3237,6 +3237,8 @@ ul.pratilipi-recommendation-carousel {
   .pratilipi-pratilipi-page-bottom-strip a, .pratilipi-pratilipi-page-bottom-strip button {
     flex-grow: 1;
     margin: 0px;
+    height: 50px;
+    font-size: 1.3em;
     border-radius: unset; }
 
 /*# sourceMappingURL=style.css.map */
