--- a/src/pwa-stylesheets/style.css
+++ b/src/pwa-stylesheets/style.css
@@ -3238,7 +3238,8 @@ ul.pratilipi-recommendation-carousel {
     flex-grow: 1;
     margin: 0px;
     height: 50px;
-    border-radius: unset; }
+    border-radius: unset;
+    max-width: 34%; }
   @media (min-width: 768px) {
     .pratilipi-pratilipi-page-bottom-strip {
       display: none !important; } }
