Updating PWA files

--- a/src/pwa-stylesheets/style.css
+++ b/src/pwa-stylesheets/style.css
@@ -3231,7 +3231,7 @@ ul.pratilipi-recommendation-carousel {
   display: flex;
   flex-direction: row;
   position: fixed;
-  top: 0;
+  bottom: 0;
   left: 0;
   right: 0; }
   .pratilipi-pratilipi-page-bottom-strip .bottom-strip-button {
