--- a/src/pwa-stylesheets/style.css
+++ b/src/pwa-stylesheets/style.css
@@ -1094,6 +1094,12 @@ nav.pratilipi-navigation-drawer {
       align-self: center;
       line-height: 1;
       color: initial; }
+  @media (min-width: 769px) {
+    .pratilipi-pratilipi-info .hide-in-desktop {
+      display: none; } }
+  @media (max-width: 768px) {
+    .pratilipi-pratilipi-info .hide-in-mobile-and-tablets {
+      display: none; } }
 
 .pratilipi-review-list {
   z-index: initial;
@@ -3231,7 +3237,7 @@ ul.pratilipi-recommendation-carousel {
   display: flex;
   flex-direction: row;
   position: fixed;
-  top: 0;
+  bottom: 0;
   left: 0;
   right: 0; }
   .pratilipi-pratilipi-page-bottom-strip .bottom-strip-button {
